Twenty Twenty: Correctly align Social Icons block in the editor.
This changeset resets `padding-left` property for the Social Icons block in the editor.

Props umesh84, audrasjb, nidhidhandhukiya, kajalgohel.
Fixes #55987.

Built from https://develop.svn.wordpress.org/trunk@54152


git-svn-id: http://core.svn.wordpress.org/trunk@53711 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwenty/assets/css/editor-style-block-rtl.css
+++ b/wp-content/themes/twentytwenty/assets/css/editor-style-block-rtl.css
@@ -1106,6 +1106,10 @@ hr.wp-block-separator.is-style-dots::before {
 	padding-right: 1.3em;
 }
 
+.editor-styles-wrapper ul.block-editor-block-list__block.wp-block-social-links {
+	padding-left: 0;
+}
+
 /* Block: Post Template ---------------- */
 
 .editor-styles-wrapper ul.wp-block-post-template {
